# tag/tag.controller.go
@@ -19,7 +19,17 @@ type ArticleIdAndTagId struct {
 type TagController struct {
 	TagRepository
 }
-
+// ShowAccount godoc
+//	@Summary		create tag
+//	@Description	user의 custom tag를 생성합니다.
+//	@Tags			tag
+//	@Accept			json
+//	@Param			Authorization	header	string	true	"Insert your access token"	default(Bearer <Add access token here>)
+//	@Param			request			body	TagBody	true	"information to create tag"
+//	@Success		201				
+//	@Failure		400				{object}	common.ErrorMessage
+//	@Failure		500				{object}	common.ErrorMessage
+//	@Router			/tag [post]
 func (tc TagController)CreateTag(c *fiber.Ctx) error {
 	userId, ok := c.Locals("userId").(uint)
 
@@ -44,7 +54,14 @@ func (tc TagController)CreateTag(c *fiber.Ctx) error {
 
 	return c.SendStatus(fiber.StatusCreated)
 }
-
+// ShowAccount godoc
+//	@Summary	user의 모든 tag를 반환합니다.
+//	@Tags		tag
+//	@Param		Authorization	header		string	true	"Insert your access token"	default(Bearer <Add access token here>)
+//	@Success	200				{array}		models.Tag
+//	@Failure	400				{object}	common.ErrorMessage
+//	@Failure	500				{object}	common.ErrorMessage
+//	@Router		/tag/all [get]
 func (tc TagController)GetAllTagsOfUser(c *fiber.Ctx) error {
 	userId, ok := c.Locals("userId").(uint)
 
@@ -62,7 +79,17 @@ func (tc TagController)GetAllTagsOfUser(c *fiber.Ctx) error {
 
 	return c.JSON(tags)
 }
-
+// ShowAccount godoc
+//	@Summary		attach tag
+//	@Description	user의 custom tag를 article에 붙입니다.
+//	@Tags			tag
+//	@Accept			json
+//	@Param			Authorization	header	string				true	"Insert your access token"	default(Bearer <Add access token here>)
+//	@Param			request			body	ArticleIdAndTagId	true	"information to attach tag"
+//	@Success		200				
+//	@Failure		400				{object}	common.ErrorMessage
+//	@Failure		500				{object}	common.ErrorMessage
+//	@Router			/tag/attach [patch]
 func(tc TagController)AttachTagToArticle(c *fiber.Ctx) error {
 	userId, ok := c.Locals("userId").(uint)
 
@@ -96,7 +123,17 @@ func(tc TagController)AttachTagToArticle(c *fiber.Ctx) error {
 
 	return c.SendStatus(fiber.StatusOK)
 }
-
+// ShowAccount godoc
+//	@Summary		detach tag
+//	@Description	article로부터 tag를 떼어냅니다.
+//	@Tags			tag
+//	@Accept			json
+//	@Param			Authorization	header	string				true	"Insert your access token"	default(Bearer <Add access token here>)
+//	@Param			request			body	ArticleIdAndTagId	true	"information to detach tag"
+//	@Success		200				
+//	@Failure		400				{object}	common.ErrorMessage
+//	@Failure		500				{object}	common.ErrorMessage
+//	@Router			/tag/detach [patch]
 func (tc TagController)DetachTagFromArticle(c *fiber.Ctx) error {
 	detachBody := new(ArticleIdAndTagId)
 
@@ -110,7 +147,16 @@ func (tc TagController)DetachTagFromArticle(c *fiber.Ctx) error {
 
 	return c.SendStatus(fiber.StatusOK)
 }
-
+// ShowAccount godoc
+//	@Summary		delete tag
+//	@Description	user의 custom tag를 삭합니다.
+//	@Tags			tag
+//	@Param			Authorization	header	string	true	"Insert your access token"	default(Bearer <Add access token here>)
+//	@Param			tagId			path	integer	true	"tag id to be deleted"
+//	@Success		200				
+//	@Failure		400				{object}	common.ErrorMessage
+//	@Failure		500				{object}	common.ErrorMessage
+//	@Router			/tag/:tagId [delete]
 func(tc TagController)DeleteTagById(c *fiber.Ctx) error {
 	userId, ok := c.Locals("userId").(uint)
 
@@ -145,7 +191,16 @@ func(tc TagController)DeleteTagById(c *fiber.Ctx) error {
 
 	return c.SendStatus(fiber.StatusOK)
 }
-
+// ShowAccount godoc
+//	@Summary		특정 tag에 해당하는 articles를 반환합니다.
+//	@Description	tag id에 해당하는 모든 articles를 반환합니다.
+//	@Tags			tag
+//	@Param			Authorization	header		string	true	"Insert your access token"	default(Bearer <Add access token here>)
+//	@Param			tagId			path		integer	true	"tag id to get articles"
+//	@Success		200				{array}		models.Article
+//	@Failure		400				{object}	common.ErrorMessage
+//	@Failure		500				{object}	common.ErrorMessage
+//	@Router			/tag/articles/:tagId [get]
 func (tc TagController)GetArticlesByTagId(c *fiber.Ctx) error {
 	userId, ok := c.Locals("userId").(uint)
 
