# user/user.controller.go
@@ -3,10 +3,10 @@ package user
 import (
 	"errors"
 	"log"
+	"moapick/common"
 	"moapick/db/models"
 
 	"net/http"
-	"strconv"
 
 	"github.com/gofiber/fiber/v2"
 	"gorm.io/gorm"
@@ -24,12 +24,23 @@ type UserController struct {
 	UserService
 }
 
+// ShowAccount godoc
+//	@Summary		sign in
+//	@Description	미리 가입되어있어야 하거나 비밀번호 같은 것 필요없습니다. 그냥 이메일만 보내면 그에 맞는 토큰을 생성해 돌려줍니다.
+//	@Tags			user
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		SignInBody	true	"email to login"	Format(email)
+//	@Success		201		{object}	JwtAccessToken
+//	@Failure		400		{object}	common.ErrorMessage
+//	@Failure		500		{object}	common.ErrorMessage
+//	@Router			/user [post]
 func (uc UserController)SignIn(c *fiber.Ctx) error {
 	singInBody := new(SignInBody)
 
 	if err := c.BodyParser(singInBody); err != nil {
 		log.Println(err.Error())
-		return c.Status(fiber.StatusBadRequest).JSON( fiber.Map{"error": err.Error()})
+		return c.Status(fiber.StatusBadRequest).JSON(common.ErrorMessage{Error: err.Error()})
 	}
 
 	newUser := models.User{Email: singInBody.Email}
@@ -49,22 +60,31 @@ func (uc UserController)SignIn(c *fiber.Ctx) error {
 
 	if jwt, err := uc.UserService.IssueJwt(singInBody.Email, user.ID); err == nil {
 		responseBody := JwtAccessToken{AccessToken: jwt}
-		return c.JSON(responseBody)
+		return c.Status(fiber.StatusCreated).JSON(responseBody)
 	}
 
 	return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
 		"error": "error during sign-in process",
 	})
 }
-
+// ShowAccount godoc
+//	@Summary		get user
+//	@Description	user id를 통해 유저 정보를 반환합니다.
+//	@Tags			user
+//	@Param			Authorization	header		string	true	"Insert your access token"	default(Bearer <Add access token here>)
+//	@Param			userId			path		integer	true	"userId to get user info"
+//	@Success		200				{object}	models.User
+//	@Failure		400				{object}	common.ErrorMessage
+//	@Failure		500				{object}	common.ErrorMessage
+//	@Router			/user/ [get]
 func (uc UserController)GetUserById(c *fiber.Ctx) error {
-	userId, err := strconv.Atoi(c.Params("userId"))
+	userId, ok := c.Locals("userId").(uint)
 	
-	if err != nil {
-		return c.JSON(fiber.StatusBadRequest, "userId must be integer")
+	if !ok {
+		return c.JSON(fiber.StatusBadRequest, "failed to get user id")
 	}
 
-	user, err := uc.UserRepository.GetUserById(uint(userId))
+	user, err := uc.UserRepository.GetUserById(userId)
 
 	if err != nil {
 		log.Println(err.Error())
